reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__self_referential_struct-4.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: "reflectapi :: codegen :: openapi :: Spec :: from(& schema)"
---
{
  "openapi": "3.1.0",
  "info": {
    "title": "",
    "description": "",
    "version": "1.0.0"
  },
  "paths": {
    "/inout_test": {
      "description": "",
      "post": {
        "operationId": "inout_test",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/reflectapi_demo.tests.serde.Category"
              }
            }
          },
          "required": true
        },
        "responses": {
          "200": {
            "description": "200 OK",
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/reflectapi_demo.tests.serde.Category"
                }
              }
            }
          }
        }
      }
    }
  },
  "components": {
    "schemas": {
      "reflectapi_demo.tests.serde.Category": {
        "type": "object",
        "title": "reflectapi_demo.tests.serde.Category",
        "required": [
          "name",
          "subcategories"
        ],
        "properties": {
          "name": {
            "$ref": "#/components/schemas/std.string.String"
          },
          "subcategories": {
            "description": "Expandable array type",
            "type": "array",
            "items": {
              "$ref": "#/components/schemas/reflectapi_demo.tests.serde.Category"
            }
          }
        }
      },
      "std.string.String": {
        "description": "UTF-8 encoded string",
        "type": "string"
      }
    }
  }
}
